--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/builders": "^0.13.0",
     "@discordjs/rest": "^0.4.1",
     "discord-api-types": "^0.33.1",
+    "discord-together": "^1.3.3",
     "discord.js": "^13.7.0"
   }
 }
