--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@discordjs/builders": "^0.13.0",
     "@discordjs/rest": "^0.4.1",
+    "@discordjs/voice": "^0.9.0",
     "axios": "^0.27.2",
     "discord-api-types": "^0.33.1",
     "discord-together": "^1.3.3",
-    "discord.js": "^13.7.0"
+    "discord.js": "^13.7.0",
+    "libsodium-wrappers": "^0.7.10"
   }
 }
