--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord-api-types": "^0.33.1",
     "discord-together": "^1.3.3",
     "discord.js": "^13.7.0",
+    "ffmpeg-static": "^4.4.1",
     "libsodium-wrappers": "^0.7.10"
   }
 }
