--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "axios": "^0.27.2",
     "discord-api-types": "^0.33.1",
     "discord-together": "^1.3.3",
+    "discord-tts": "^1.2.1",
     "discord.js": "^13.7.0",
     "ffmpeg-static": "^4.4.1",
+    "google-tts-api": "^2.0.2",
     "libsodium-wrappers": "^0.7.10"
   }
 }
