--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "discord.js": "^13.7.0",
     "ffmpeg-static": "^4.4.1",
     "google-tts-api": "^2.0.2",
-    "libsodium-wrappers": "^0.7.10"
+    "libsodium-wrappers": "^0.7.10",
+    "nodemon": "^2.0.16",
+    "ytdl-core": "^4.11.0"
   }
 }
